[workspace]
resolver = "2"

members = [
  "crates/spl-risk-core",
  "crates/spl-risk-rpc",
  "crates/spl-risk-community",
  "crates/spl-risk-output",
  "bin/spl-risk",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Vlad"]
license = "MIT"

[workspace.dependencies]
anyhow = "1"
thiserror = "2.0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
clap = { version = "4", features = ["derive", "env"] }
owo-colors = "4"
async-trait = "0.1"
chrono = "0.4"
base64 = "0.22"
bs58 = "0.5"

# Solana deps (keep versions aligned across crates)
solana-sdk = "3"
solana-client = "3.1.7"
solana-commitment-config = "3.1.0"
spl-token-2022 = "10.0.0"
# Solana deps required by spl-risk-rpc crate
solana-program = "3"
solana-account-decoder = "3.1.7"
solana-transaction-status = "3.1.7"

# Metaplex
mpl-token-metadata = "5.0"

# Output (если используешь colored в output)
colored = "3.1"
