

[package]
name = "spl-risk-community"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
description = "Community Edition heuristic rules for SPL Risk"

[dependencies]
# Core models + scoring traits
spl-risk-core = { path = "../spl-risk-core" }
base64 = "0.22"
bs58 = "0.5"
async-trait = "0.1"

# Shared deps
anyhow = { workspace = true }
serde = { workspace = true }

[features]
# Community rules only
default = []
pro = []
lp-analysis = []
