

[package]
name = "spl-risk-rpc"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
description = "Solana RPC client + caching layer for SPL Risk"

[dependencies]
# Workspace shared deps
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }

# Core models
spl-risk-core = { path = "../spl-risk-core" }

# Solana SDK / async RPC
solana-sdk = "3"
solana-client = "3.1.7"
solana-commitment-config = "3.1.0"
spl-token-2022 = "10.0.0"
# Solana deps required by spl-risk-rpc crate
solana-program = "3"
solana-account-decoder = "3.1.7"
solana-transaction-status = "3.1.7"

# SPL Token parsing

mpl-token-metadata = { workspace = true }

# Utilities
bs58 = { workspace = true }
base64 = { workspace = true }

[features]
default = []
lp-analysis = []
